# fuel-api

./: .pre-commit-config.yaml  pyproject.toml
fuel-api/: db.py  main.py  models.py
